<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.rifeng.agriculturalstation.view.TabChangeView
            android:id="@+id/id_tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="#ff45c01a"
            app:tab_icon="@mipmap/ic_tab_home"
            app:tab_text="@string/homepage"
            app:tab_text_size="12sp" />

        <com.rifeng.agriculturalstation.view.TabChangeView
            android:id="@+id/id_tab_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="#ff45c01a"
            app:tab_icon="@mipmap/ic_tab_task"
            app:tab_text="@string/task"
            app:tab_text_size="12sp" />

        <com.rifeng.agriculturalstation.view.TabChangeView
            android:id="@+id/id_tab_grab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="#ff45c01a"
            app:tab_icon="@mipmap/ic_tab_grab"
            app:tab_text="@string/grab"
            app:tab_text_size="12sp" />

        <com.rifeng.agriculturalstation.view.TabChangeView
            android:id="@+id/id_tab_forum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="#ff45c01a"
            app:tab_icon="@mipmap/ic_tab_forum"
            app:tab_text="@string/forum"
            app:tab_text_size="12sp" />

        <com.rifeng.agriculturalstation.view.TabChangeView
            android:id="@+id/id_tab_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="#ff45c01a"
            app:tab_icon="@mipmap/ic_tab_mine"
            app:tab_text="@string/mine"
            app:tab_text_size="12sp" />
    </LinearLayout>
</LinearLayout>
