<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_dark"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:text="@string/pwdManageOldPWD"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pm_old_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pwdManageOldPWDTips"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/pm_old_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/et_delete_selector" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/pwdManageModifyTips"
        android:textColor="@android:color/holo_red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="27dp"
            android:gravity="center_vertical"
            android:text="@string/pwdManageNewPWD"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pm_new_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pwdManageNewPWDTips"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/pm_new_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/et_delete_selector" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/retrieveTips" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/pwdManageConfirmNewPWD"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pm_confirmnew_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/pwdManageConfirmNewPWD"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/pm_confirmnew_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/et_delete_selector" />
    </LinearLayout>

    <Button
        android:id="@+id/pm_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/mine_btn_selector"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="10dp"
        android:text="@string/confirmModify"
        android:textColor="@android:color/white"
        android:textSize="18sp" />
</LinearLayout>
